--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quizz - Spaced Repetition Quiz App</title>
+    <title>Indfødsretsprøven - Danish Citizenship Test</title>
   </head>
   <body>
     <div id="root"></div>
